# NeuroBackbone

./: README.md  __init__.py  advanced_hooks.py  backbone.py  core.py  hooks.py  pyproject.toml  utils.py
examples/: basics.py  main.py  model.py
src/: requirements.txt
src/neurobackbone/: __init__.py
src/neurobackbone/core/: BackboneModule.py  BackboneTrainer.py  __init__.py
src/neurobackbone/functions/: __init__.py  advanced_functions.py  functions.py
src/neurobackbone/hooks/: __init__.py  advanced_hooks.py  hooks.py
src/neurobackbone/utils/: utils.py
