[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurobackbone"]

[tool.hatch.version]
path = "src/neurobackbone/__init__.py"

[tool.hatch.envs.static]
dev-mode = true

[project]
name = "neurobackbone"
dynamic = ["version"]
authors = [
  { name="Pasquale Silvestri", email="passilvestri.dev@gmail.com" },
]
maintainers = [
  { name="Pasquale Silvestri", email="passilvestri.dev@gmail.com" },
]
description = "A lightweight, flexible Python framework based on Pytorch, for building and training neural networks"
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "torch>=1.13.1", 
    "tqdm>=4.62.3",
    "matplotlib>=3.6.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PasSilvestri/NeuroBackbone"
Issues = "https://github.com/PasSilvestri/NeuroBackbone/issues"